--- a/package/Dockerfile
+++ b/package/Dockerfile
@@ -26,19 +26,15 @@ RUN zypper --non-interactive install --no-recommends \
   gcc-c++ \
   git \
   graphviz \
-  lcov \
   swig \
   python-devel \
   ruby-devel \
   graphviz-devel \
   jsoncpp-devel \
   libmicrohttpd-devel \
-  libyui-devel \
-  libyui-ncurses-devel \
-  libyui-qt-devel \
-  libyui-rest-api-devel \
+  libboost_test-devel \
+  ncurses-devel \
   libzypp-devel \
-  openSUSE-release-ftp \
   obs-service-source_validator \
   perl-JSON \
   pkg-config \
@@ -47,29 +43,16 @@ RUN zypper --non-interactive install --no-recommends \
   'pkgconfig(Qt5Svg)' \
   'pkgconfig(Qt5Widgets)' \
   'pkgconfig(Qt5X11Extras)' \
-  "rubygem(coveralls-lcov)" \
   "rubygem(libyui-rake)" \
-  "rubygem(rubocop)" \
   ShellCheck \
   rpm-build \
   tack \
-  yast2-devtools \
   && zypper clean --all \
   && rm -rf /usr/lib*/ruby/gems/*/cache/ \
   && rm -rf /usr/share/doc/ \
   && find /usr/lib/locale/* -maxdepth 1 | grep -v -E "(en_US|cs_CZ|es_ES|de_DE|C.utf8)" | xargs rm -rf \
   && find /usr/share/locale -name "*.mo" -delete
 
-COPY libyui-travis /usr/local/bin/
-RUN chmod a+x /usr/local/bin/libyui-travis
 ENV LC_ALL=en_US.UTF-8
 RUN mkdir -p /usr/src/app
 WORKDIR /usr/src/app
-
-# run some smoke tests to make sure there is no serious issue with the image
-RUN c++ --version
-
-# this is a bit tricky as the libyui/rake loads some files at the initialization
-RUN mkdir -p package && echo > package/test.spec && \
-  echo -e 'SET(VERSION_MAJOR "42")\nSET(VERSION_MINOR "42")\nSET(VERSION_PATCH "42")' \
-  > VERSION.cmake && rake -t -r libyui/rake -V && rm -rf package && rm VERSION.cmake
